# kaflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yaml  test.yaml
kaflow/: __init__.py  _consumer.py  applications.py  dependencies.py  exceptions.py  logger.py  message.py  parameters.py  serialize.py  serializers.py  testclient.py  topic.py  typing.py
kaflow/_utils/: asyncio.py  di.py  inspect.py  overrides.py  typing.py
kaflow/asyncapi/: _builder.py  docs.py  models.py
tests/: key_value.proto  key_value_pb2.py  key_value_pb2.pyi  test_application.py  test_avro_serializer.py  test_json_serializer.py  test_protobuf_serializer.py  test_serializer.py  test_serializers.py  test_string_serializer.py
tests/_utils/: test_asyncio.py  test_inspect.py
