[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaflow"
description = "Python Stream processing backed by Apache Kafka."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Gabriel Martin Blazquez", email = "gmartinbdev@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black >=23.1.0",
  "ruff ==0.0.257",
  "mypy ==0.991",
  "pre-commit >=3.0.0",
  "pytest >=7.2.0",
  "coverage[toml] >=7.0.0",
]

[project.urls]
Documentation = "https://github.com/gabrielmbmb/kaflow#readme"
Issues = "https://github.com/gabrielmbmb/kaflow/issues"
Source = "https://github.com/gabrielmbmb/kaflow"

[tool.hatch.version]
path = "kaflow/__init__.py"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["kaflow"]
parallel = true
branch = true
context = '${CONTEXT}'