[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaflow"
description = "Python Stream processing backed by Apache Kafka."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["kafka", "stream", "processing", "data", "pipeline", "flow"]
authors = [
  { name = "Gabriel Martin Blazquez", email = "gmartinbdev@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic >=1.10.0,<2.0.0",
  "aiokafka >=0.8.0",
  "di[anyio] ==0.75.2",
  "typing-extensions >=4.5.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black >=23.1.0",
  "ruff ==0.0.257",
  "mypy ==0.991",
  "pre-commit >=3.0.0",
  "pytest >=7.2.0",
  "coverage[toml] >=7.0.0",
  "types-protobuf >=3.20.0",
]
test = [
  "fastavro >=1.7.3",
  "protobuf >=3.20.0"
]

[project.urls]
Documentation = "https://github.com/gabrielmbmb/kaflow#readme"
Issues = "https://github.com/gabrielmbmb/kaflow/issues"
Source = "https://github.com/gabrielmbmb/kaflow"

[tool.hatch.version]
path = "kaflow/__init__.py"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka.*", "kafka.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["kaflow"]
# parallel = true
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
exclude_lines = [
  '\(Protocol\):$',
  'if TYPE_CHECKING:',
  'except ImportError:'
]
